fix spacing of boxes

--- a/scss/legacy.scss
+++ b/scss/legacy.scss
@@ -70,7 +70,7 @@
     --burgundian: #5a0f19;
     --oxbridge-blue: #0c2340;
     --racing-green: #003d32;
-    
+
     --burgundian-75: #5a0f19bf;
     --burgundian-85: #5a0f19d9;
     --oxbridge-blue-85: #0c2340d9;
@@ -11535,10 +11535,10 @@ header.masthead h1 {
     }
 }
 
-// #portfolio .container-fluid {
-//     max-width: 1920px;
-//     font-family: PT Mono, monospace;
-// }
+#portfolio .container-fluid {
+    max-width: 1920px;
+    font-family: PT Mono, monospace;
+}
 
 // #portfolio .container-fluid .portfolio-box {
 //     position: relative;
@@ -11606,11 +11606,11 @@ header.masthead h1 {
 .portfolio-box {
     position: relative;
     display: block;
+    max-width: 85%;
     overflow: hidden;
     margin-bottom: 1.5rem;
     cursor: pointer;
     text-decoration: none;
-    width: 80%;
     font-size: 0.85rem;
     font-weight: 600;
     align-items: center;
@@ -11638,15 +11638,12 @@ header.masthead h1 {
 
 .portfolio-box-caption-color-1 {
     background: var(--burgundian-85);
-
 }
 .portfolio-box-caption-color-2 {
     background: var(--oxbridge-blue-85);
-
 }
 .portfolio-box-caption-color-3 {
     background: var(--racing-green-85);
-
 }
 
 .project-name {
